# QT_4

./: CMakeLists.txt  main.cpp
lib/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  StopWatch.cpp  stopwatch.hpp
